Fix wrong alignment of source buttons

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -268,6 +268,10 @@ footer a.cur, footer a.cur:hover {
     vertical-align: middle;
 }
 
+.sourceSelection .btn {
+    vertical-align: middle;
+}
+
 select {
 	cursor: pointer;
 	text-align: left;
